--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.0.1
   firebase_core: ^1.4.0
+  firebase_analytics: ^8.2.0
+  firebase_crashlytics: ^2.1.1
 
 dev_dependencies:
   flutter_test:
